After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646972 - queue2: Fixes memory leak on out_flushing error in gst_queue2_create_read
queue2: Fixes memory leak on out_flushing error in gst_queue2_create_read
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Mac OS
: Normal normal
: 0.10.33
Assigned To: Tim-Philipp Müller
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-06 22:27 UTC by Håvard Graff (hgr)
Modified: 2011-04-07 19:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (774 bytes, patch)
2011-04-06 22:27 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2011-04-06 22:27:42 UTC
Created attachment 185374 [details] [review]
patch

Unref the buffer if flushing
Comment 1 André Klapper 2011-04-07 16:13:47 UTC
Håvard: Why is this a blocker?
Comment 2 Tim-Philipp Müller 2011-04-07 16:32:54 UTC
Blocker status is fine, we'd like to make sure we don't forget to look at it before the upcoming release.
Comment 3 Tim-Philipp Müller 2011-04-07 19:51:09 UTC
Pushed, along with some other leak fixes, thanks for the patch!

commit 5c75330fea3b4da43eff00feeeb165d9318427b0
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Apr 7 20:47:25 2011 +0100

    tests: add some basic unit tests for queue2

commit 12249e99c24c002f3185889287140a908b4e8855
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Apr 7 20:45:22 2011 +0100

    queue2: fix buffer leak on eos when using the ring buffer

commit 46a786cee66cb2193a22000950246f1486f48642
Author: Idar Tollefsen <itollefs@cisco.com>
Date:   Tue Jan 11 14:27:35 2011 +0100

    queue2: Fixes memory leak on out_flushing error in gst_queue2_create_read.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=646972

commit 419d117851d81b32929e0eb358ae1171b3e31a59
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Thu Apr 7 19:44:44 2011 +0100

    queue2: fix minor memory leak