queue2: Fixes memory leak on out_flushing error in gst_queue2_create_read.

https://bugzilla.gnome.org/show_bug.cgi?id=646972